--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <a href="#" class="btn red-btn">Explore Now</a>
             </div>
             <div class="about-col">
-                <img src="images/about.jpg">
+                <img src="https://i.postimg.cc/JhjQPz9m/about.jpg">
             </div>
         </div>
     </section>
