--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!--------Call to Action--------->
     <section class="cta">
         <h1>Enroll For Our Various Online Courses <br> Anywhere From The World </h1>
-        <a id="padding" href="#" class="btn">CONTACT US</a>
+        <a id="padding" href="contact.html" class="btn">CONTACT US</a>
     </section>
     <!-----footer-->
     <section class="footer">
